# zeus

./: AGENTS.md  Package.swift  README.md
rust-agent/: AGENTS.md  Cargo.toml
rust-agent/.cargo/: audit.toml
rust-agent/docs/architecture/: AGENT-LOOP.md  CONFIGURATION.md  CONTEXT-WINDOW.md  MODEL-CLIENT.md  PERFORMANCE-BENCHMARKS.md  SECURITY.md  SERVER.md  SERVICE.md  TERMINAL-HARNESS.md  TOOLS.md
rust-agent/docs/contracts/: zeus-api-contract.json
rust-agent/plan/: AGENT-LOOP-PLAN.md
rust-agent/scripts/: run-interactive-terminal.sh
rust-agent/src/: agent_loop.rs  auth.rs  bench_support.rs  client.rs  compaction.rs  config.rs  main.rs  server.rs  service.rs  storage.rs  test_http.rs  tools.rs  workspace.rs
zeus-swift/: AGENTS.md  Package.swift
zeus-swift/Sources/Zeus/: AgentAPIClient.swift  AgentDependencies.swift  AppShortcut.swift  BashPassthrough.swift  ChatViewModel.swift  ChatWindow.swift  CodexTypography.swift  FooterBar.swift  FooterMenuController.swift  FooterMenuID.swift  GitWorkspace.swift  HeaderBar.swift  InputPrompt.swift  KeyCode.swift  LocalEventMonitor.swift  Models.swift  PromptTextField.swift  RustAgentAuth.swift  RustAgentLocator.swift  RustAgentServer.swift  SearchBar.swift  Styles.swift  TerminalComponents.swift  TerminalLayout.swift  TerminalMarkdownView.swift  TerminalPalette.swift  TerminalTypography.swift  TranscriptView.swift  WindowConfigurator.swift  ZeusApp.swift
zeus-swift/Sources/ZeusCore/: AgentAPIContract.swift  AgentServerEvent.swift  PathDisplay.swift  PromptHistory.swift  PromptPathCompletion.swift  ServerSentEventParser.swift  TerminalMarkdownParser.swift  ToolMetadata.swift
zeus-swift/Tests/ZeusCheckSuite/: APIContractChecks.swift  ZeusCheck.swift  ZeusCoreChecks.swift
zeus-swift/Tests/ZeusChecks/: main.swift
zeus-swift/Tests/ZeusTests/: AgentServerEventTests.swift  PathDisplayTests.swift  TerminalMarkdownParserTests.swift  ToolMetadataTests.swift  ZeusCoreCheckTests.swift
zeus-swift/docs/: packaging.md  shortcuts.md  testing.md
zeus-swift/docs/architecture/: API-CLIENT.md  APP-LIFECYCLE.md  CHAT-STATE.md  CONTRACT.md  SECURITY.md  SERVER-SUPERVISION.md  TERMINAL-UI.md  ZEUSCORE.md
zeus-swift/scripts/: package-release.sh
