[package]
name = "rust-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
base64 = "0.22"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
memchr = "2"
mimalloc = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
tokio = { version = "1", features = ["macros", "rt"] }

[profile.release]
strip = "symbols"
lto = "thin"
codegen-units = 1
panic = "abort"
