[package]
name = "rust-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-stream = "0.3"
axum = { version = "0.8", default-features = false, features = ["http1", "http2", "json", "tokio"] }
base64 = "0.22"
bytes = "1"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
h3 = "0.0.8"
h3-axum = "0.2"
h3-quinn = "0.0.10"
memchr = "2"
mimalloc = "0.1"
quinn = "0.11"
rcgen = "0.14"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
rustls = { version = "0.23", default-features = false, features = ["std", "aws_lc_rs"] }
rustls-pemfile = "2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "rt", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower = "0.5"

[profile.release]
strip = "symbols"
lto = "thin"
codegen-units = 1
panic = "abort"
