[package]
name = "rust-agent"
version = "0.1.0"
edition = "2021"
description = "Rust backend for the Zeus macOS agent UI"
license = "MIT"
repository = "https://www.github.com/rqas-git/zeus"
readme = "../README.md"
keywords = ["agent", "chatgpt", "codex", "backend"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1"
async-stream = "0.3"
axum = { version = "0.8", default-features = false, features = ["http1", "http2", "json", "tokio"] }
base64 = "0.22"
bytes = "1"
fff-search = { version = "0.6.4", default-features = false }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
getrandom = "0.3"
h3 = "0.0.8"
h3-axum = "0.2"
h3-quinn = "0.0.10"
libc = "0.2"
libsqlite3-sys = "0.30"
memchr = "2"
mimalloc = "0.1"
quinn = "0.11"
rcgen = "0.14"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
rustls = { version = "0.23", default-features = false, features = ["std", "aws_lc_rs"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "process", "rt", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower = "0.5"

[lints.rust]
ambiguous_negative_literals = "warn"
missing_debug_implementations = "warn"
redundant_imports = "warn"
redundant_lifetimes = "warn"
trivial_numeric_casts = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"

[lints.clippy]
cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
allow_attributes_without_reason = "warn"
as_pointer_underscore = "warn"
assertions_on_result_states = "warn"
clone_on_ref_ptr = "warn"
deref_by_slicing = "warn"
disallowed_script_idents = "warn"
empty_drop = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
fn_to_numeric_cast_any = "warn"
if_then_some_else_none = "warn"
map_err_ignore = "warn"
redundant_type_annotations = "warn"
renamed_function_params = "warn"
semicolon_outside_block = "warn"
implicit_clone = "warn"
multiple_crate_versions = "allow" # Transitive dependency graph, tracked through Cargo.lock updates.
undocumented_unsafe_blocks = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unneeded_field_pattern = "warn"
unused_result_ok = "warn"
literal_string_with_formatting_args = "allow"

[profile.release]
strip = "symbols"
lto = "thin"
codegen-units = 1
panic = "abort"
